# Samsung

./: D4.py  D4S1.1.py  D4S1.py  D5S34.py  README.md  matrix_data_flat.csv  matrix_data_tidy.csv
Day10/: Day10FN.py  Rough.py
Day10/Exercises/: Class-Exercise1.py  Class-Exercise2.py  Class-Exercise3.py  Sorting1.py
Day11/: Main.py  visualization
Day5/: D5S1S2.py  Da5S2 Notes.py  Day5 Notes.py
Day7/: Day7S12.py  Day7S34.py
Day8/: Day8.py  Day8note.py
Day9/: Day9AN.py  Day9FN.py  a.csv  ay.csv  c.csv  close.csv  cy.csv  df.csv  df1.csv  df2.csv  group.csv  ma10.csv  ma120.csv  ma5.csv  ma60.csv  new_df.csv  s.csv  sec.csv  session_variables.txt  sy.csv  world_total.csv  wti.csv
Hackathon/: city_mobility_map.html  code.ipynb  first.ipynb
Hackathon_Ex/: cleaned_dataset.csv  dataset2  first.ipynb
math_wizard_project/: LICENSE.txt  l.py  pyproject.toml
math_wizard_project/math_wizard/: __init__.py  constants.py  core_extensions.py
math_wizard_project/math_wizard/custom_modules/: geometry.py
math_wizard_project/math_wizard_sivan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
