[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_wizard_sivan"
version = "0.1.0"
authors = [
  { name="Sivan" }
]
description = "A custom math library wrapping built-ins and custom modules"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["math_wizard", "math_wizard.*"]